// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateReply creates replies and associates itself with specified article 1`] = `
Object {
  "appId": "test",
  "createdAt": "2017-01-28T08:45:57.011Z",
  "reference": "http://google.com",
  "text": "FOO FOO",
  "type": "RUMOR",
  "userId": "test",
}
`;

exports[`CreateReply should support waitForHyperlinks 1`] = `
Object {
  "appId": "test",
  "createdAt": "2017-01-28T08:45:57.011Z",
  "hyperlinks": Array [
    Object {
      "normalizedUrl": "http://google.com/",
      "summary": "Gooooooogle",
      "title": "Google google",
      "url": "http://google.com",
    },
  ],
  "reference": "http://google.com",
  "text": "Bar Bar",
  "type": "RUMOR",
  "userId": "test",
}
`;

exports[`CreateReply should throw error since a reference is required for type !== NOT_ARTICLE 1`] = `
Array [
  [GraphQLError: reference is required for type !== NOT_ARTICLE],
]
`;
